fix(component): fix overflow text getting cut off

--- a/components/carousel/carousel.module.scss
+++ b/components/carousel/carousel.module.scss
@@ -185,6 +185,8 @@
     padding: 8px;
     margin: 0;
     text-align: center;
+    white-space: nowrap;
+    overflow-x: scroll;
     color: $color-lightest;
     @include text(body2);
     transition: opacity 0.3s ease-in-out;
