--- a/components/large-carousel/largeCarousel.module.scss
+++ b/components/large-carousel/largeCarousel.module.scss
@@ -340,14 +340,14 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
     color: $color-lightest;
-    padding: 8px 8px 16px 8px;
+    padding: 8px 0 16px 0;
     margin: 0;
     // border: 1px solid red;
     @include text(body2);
+    white-space: nowrap;
+    overflow-x: scroll;
   }
 
   &__play_text {
